# Dagerro

./: .gitignore  README.md  setup.txt
Arduino Code/: solve_time_differencees.py
Arduino Code/EQ-Control/: EQ-Control.ino
Arduino Code/rtc_example/: rtc_example.ino
Electronics/Driver/: Driver.kicad_pcb  Driver.kicad_prl  Driver.kicad_pro  Driver.kicad_sch  fp-info-cache
Electronics/Gerber_PCB_Motor Driver/: Drill_PTH_Through.DRL  Drill_PTH_Through_Via.DRL  Gerber_BoardOutlineLayer.GKO  Gerber_BottomLayer.GBL  Gerber_BottomSilkscreenLayer.GBO  Gerber_BottomSolderMaskLayer.GBS  Gerber_DocumentLayer.GDL  Gerber_TopLayer.GTL  Gerber_TopSilkscreenLayer.GTO  Gerber_TopSolderMaskLayer.GTS
Electronics/MagneticEncoder/: MagneticEncoder.kicad_pcb  MagneticEncoder.kicad_prl  MagneticEncoder.kicad_pro  MagneticEncoder.kicad_sch  fp-info-cache
Electronics/MountControl/: #auto_saved_files#  MountControl.kicad_pcb  MountControl.kicad_prl  MountControl.kicad_pro  MountControl.kicad_sch  New.kicad_sym  _autosave-MountControl.kicad_pcb  _autosave-MountControl.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table  ~MountControl.kicad_sch.lck
Field-Solving/: field_solve_coords.sh  field_solve_scripts.txt  movement.py  solving.txt
Imaging/: camera_library_install.txt  capture.py  field_solve_scripts.txt  image_diff.py  move_and_guide.py  move_mount.py  scripts.txt
Physical Parts/: Worm Gear.3mf
main_loop/: calculate_movement.py  field_solve_coords.sh  imaging.sh  move_mount.py  movement.py  polar_align.sh
pico-firmware/: CMakeLists.txt  i2c.c  i2c.h  main.c
(+471 files in other folders)
